feat: Add component classes, search, basic routes and links
Moved HTML into separate component class files for future reuse and simplification. Created relevant LifeCycle events.

Added search functionality for book title and author name. Still Needed: OnDropDownChanged event to add books to the library from /search

Setup required route and link components for navigating to '/' and '/search' with the proper URL

--- a/src/App.css
+++ b/src/App.css
@@ -104,9 +104,20 @@ body, .app {
 }
 
 /* books grid */
-
-.books-grid {
+ol {
     list-style-type: none;
+}
+
+#currentlyReading:after {
+    content: 'Currently Reading';
+}
+#wantToRead:after {
+    content: 'Want to Read';
+}
+#read:after {
+    content: 'Read';
+}
+.books-grid {
     padding: 0;
     margin: 0;
 
@@ -132,7 +143,6 @@ body, .app {
 .book-authors {
     color: #999;
 }
-
 .book-top {
     position: relative;
     height: 200px;
