fix: Remove disabled property from firstChild option on select
The disabled prop caused the second option element to not respond to any event (ie., click). 
Added the same browser-defined styles to the first option but the browser overwrites my changes on hover.

--- a/src/App.css
+++ b/src/App.css
@@ -161,16 +161,16 @@ ol {
     cursor: pointer;
 }
 
+.dropdown_title {
+    color: #808080 !important;
+    background-color: transparent !important;
+    cursor: inherit !important;
+}
 /* book cover */
 
 .book-cover {
     box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
     background: #eee;
-}
-.book-cover-missing {
-    content:url("./icons/missing-book-cover.jpg");
-    width: 128px;
-    height: 193px;
 }
 .book-cover-title {
     padding: 20px 10px 0;
