fix: Add default missing book cover image using backgroundImage
Removed the img element and used ternary in place of previous quasi-if/else statements

--- a/src/App.css
+++ b/src/App.css
@@ -172,6 +172,14 @@ ol {
     box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
     background: #eee;
 }
+.book-cover-missing {
+    background-image: url("./icons/missing-book-cover.jpg");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 150px;
+    width: 128px;
+    height: 193px;
+}
 .book-cover-title {
     padding: 20px 10px 0;
     text-align: center;
